# medroutes-fiap

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  RELATORIO.html  RELATORIO.md  pyproject.toml
.github/workflows/: deploy.yml
.streamlit/: config.toml
app/: geocoding.py  main.py
app/genetic/: algorithm.py  fitness.py  operators.py
app/llm/: claude_client.py
app/maps/: route_map.py
app/models/: delivery.py
app/ui/: theme.css
experiments/: run_experiments.py
experiments/results/: convergence.json
infra/: deploy.ps1  deploy.sh  main.bicep  parameters.json  resources.bicep
tests/: conftest.py  test_algorithm.py  test_claude_client.py  test_fitness.py  test_geocoding.py  test_models.py  test_operators.py
tools/: _chrome.py  build_report.py  render_chart.py
tools/assets/: report.css
