[tool.poetry]
name = "medroutes"
version = "0.1.0"
description = "Sistema de otimizacao de rotas para distribuicao de medicamentos e insumos usando Algoritmo Genetico, Streamlit, Folium e Claude API"
authors = ["Dhiego Pimenta <dhiegopimenta@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.38.0"
folium = "^0.17.0"
streamlit-folium = "^0.23.1"
geopy = "^2.4.1"
anthropic = "^0.34.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
python-dotenv = "^1.0.1"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
